<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dnerd.dipty.farmcheck.SignUp"
    tools:showIn="@layout/activity_sign_up"
    android:background="@drawable/dark_clouds"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="@color/lightorange"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:textAppearanceLarge"/>

    <LinearLayout
        android:id="@+id/signupLinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">


        <EditText
            android:id="@+id/signupEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/name"
            android:drawableLeft="@drawable/person_icon"
            android:textColorHint="@color/hint_color"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"/>
           <!-- android:background="#11000000"!-->

        <EditText
            android:id="@+id/signupEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:hint="@string/email"
            android:drawableLeft="@drawable/email_icon"
            android:textColorHint="@color/hint_color"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"/>

        <EditText
            android:id="@+id/signupEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:password="true"
            android:drawableLeft="@drawable/password_icon"
            android:textColorHint="@color/hint_color"
            android:textSize="30sp"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"/>
    </LinearLayout>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/button_custom"
            android:textSize="26sp"
            android:text="@string/signup" />



</LinearLayout>
